2.36 (0000-00-00)
Application:
- Translations updated: French, Russian.

Libraries:
- libgwydgets: Igor Pro .itx graph ASCII export option was added.
- libgwyprocess: Function gwy_data_field_extend() for extending data fields
  with various exterior handling types was added.
- libgwyprocess: A function for Euclidean distance transform of a mask was
  added.
- libgwyapp: gwy_app_wait_start() always creates a progress/cancel dialog,
  even if no parent window is passed.
- libgwyprocess: Grain quantities characterising the moment-equivalent
  ellipses of grains (axis lengths and orientation) were added.

Modules:
- Columnar synthesis (new): Simulation of columnar film growth.
- Wave synthesis (new): Composes images using interference of waves from a
  number of point sources.
- Euclidean distance transform (new): Creates a data field representing the
  distance transform of given mask.
- Domain synthesis (new): Creates patterns based on a hybrid non-equilibrium
  Ising model.
- MetroPro: Files with header formats 2 and 3 are recognised and imported.
  Almost all header fields are imported to metadata.
- Omicron: Value offsets in grid spectra were corrected.
- Read value: Local curvature at cursor is also calculated and displayed.
- Zeiss: ‘Image Pixel Size’ field is used for real dimensions instead of
  ‘Pixel Size’ if it is present.
- Affine distortion: ACF of one image can be used to correct another image.
  Uncorrected lattice vectors can be entered numerically.
- PSIA: Rotated non-square images are imported correctly.

Other:
- A false colour gradient mimicking the MetroPro rainbow palette was added.
- Compatibility with Gtk+ 2.8, accidentally broken in 2.35, was restored.


2.35 (2014-03-02)
Application:
- A log of data modification operations is recorded for each channel and volume
  data. A viewer of data processing operation log is available in the
  right-click menus.  Logging can be enabled and disabled in the Edit menu.